# ChangeLog for sys-apps/slocate
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/slocate/ChangeLog,v 1.86 2009/08/15 23:47:26 vapier Exp $

  15 Aug 2009; Mike Frysinger <vapier@gentoo.org> slocate-3.1-r2.ebuild:
  Respect CC/CPPFLAGS env vars #280847 by Chris Slycord.

  07 Feb 2009; Mike Frysinger <vapier@gentoo.org>
  files/slocate-3.1-cron2.patch:
  Allow people to disable ionice args #257475 by Jan-Matthias Braun.

  02 Dec 2008; Mike Frysinger <vapier@gentoo.org> files/updatedb.conf:
  Add ocfs/ocfs2 to PRUNEFS #249590 by Oleg Gawriloff.

*slocate-3.1-r2 (19 Aug 2008)

  19 Aug 2008; Mike Frysinger <vapier@gentoo.org>
  +files/slocate-3.1-CVE-2007-0227.patch, +files/slocate-3.1-NUL.patch,
  +files/slocate-3.1-cron2.patch, files/updatedb.conf,
  +slocate-3.1-r2.ebuild:
  Add patch from Debian for CVE 2007-0227. Run updatedb through ionice
  #231203 by Daniel Pielmeier. Add support by marty rosenberg for -0 (NUL
  delimited output) #216838.

  06 Feb 2008; nixnut <nixnut@gentoo.org> slocate-3.1-r1.ebuild:
  stable on ppc wrt bug #180360

  06 Feb 2008; Raúl Porcel <armin76@gentoo.org> slocate-3.1-r1.ebuild:
  alpha/ia64 stable wrt #180360

  06 Feb 2008; Christoph Mende <angelos@gentoo.org> slocate-3.1-r1.ebuild:
  Stable on amd64, bug #180360

  06 Feb 2008; Ferris McCormick <fmccor@gentoo.org> slocate-3.1-r1.ebuild:
  Sparc stable --- Bug #180360 --- can rebuild database and locate things.

  06 Feb 2008; Brent Baude <ranger@gentoo.org> slocate-3.1-r1.ebuild:
  stable ppc64, bug 180360

  04 Feb 2008; Jeroen Roovers <jer@gentoo.org> slocate-3.1-r1.ebuild:
  Stable for HPPA (bug #180360).

  04 Feb 2008; Dawid Węgliński <cla@gentoo.org> slocate-3.1-r1.ebuild:
  Stable on x86 (bug #180360)

  04 Feb 2008; Mike Frysinger <vapier@gentoo.org> slocate-3.1-r1.ebuild:
  When upgrading from slocate-2.x, delete the slocate db as they are
  incompatible.
