@@ -5,12 +5,12 @@ AUX slocate-3.1-build.patch 1258 RMD160 1eaac141880c84e33e1673b253d6b0a6bb1f37f3
 AUX slocate-3.1-cron-prefix.patch 487 RMD160 a1f04e5d936fedafaaedecc1bbf628aa74a13cff SHA1 fbf548f2658b15b477843d4c5ee8ced496ef37dd SHA256 643a30fa0caf2943d106ef0113d512385209148544615409b6be40fbb64d2b28
 AUX slocate-3.1-cron.patch 352 RMD160 9a987c16e5b3f26b8453cbc8bea53b9f0513ffaa SHA1 8a54b02e1af14468abfe57e3bff7687e1b0ac1da SHA256 e5d97b84e7de76721820606a33a8d517f6715b8c11fa6ff9c790c46d832e766f
 AUX slocate-3.1-cron2-prefix.patch 679 RMD160 a344c02105dad97b9447e0c39e7183fae0995b89 SHA1 70a30e34629a4c5c87e7603bed6236203d171a5c SHA256 531f2f4cf730d61aa35d5d126457cc1041f97c418aeab05827b4258dac9a61f7
-AUX slocate-3.1-cron2.patch 708 RMD160 f5d1585ca5dd36b61adc641212bdd35c56baa41a SHA1 0491ee397e05e25451776acf50d1de39e21a58cd SHA256 cb7113709a7e228df2d85d906610be6c4e72a4efaf1ed21c0cf5715b91787039
+AUX slocate-3.1-cron2.patch 807 RMD160 32421fb1c5d7996e43d22a593da9cd46d4efcc06 SHA1 c5f6815522123b23eba97d12e57d6e1a5dbbe6d7 SHA256 fe389e7034713886e2e685af6906f2a4497d8e6240b0e797f8600052d719ac3a
 AUX slocate-3.1-darwin.patch 579 RMD160 1289aea864c289dad96ed9451de86a958e6ec2ee SHA1 417234ad13dc460f37272e4ba6839d0c2efb638f SHA256 89a574fc274ba84b3e0f50696ad9df971dfd8f2b1bddcec1d1d5a35ebc3128b3
 AUX slocate-3.1-incompat-warning.patch 528 RMD160 4220d1c38e050e8eeff4f524ed1cd6b2da5d62d4 SHA1 2cd98e3f83ea8bd8466e7ece5ca747020bcb54ed SHA256 ba9c9806c2e2058e5644f74b7697d58ea8a3f004e4f35885cbb97354a89dd9ac
 AUX updatedb.conf 790 RMD160 473661873758e58de47a5483efcbe71825c82177 SHA1 15045e12c9a80109a18a43de534d6c0572ba3761 SHA256 82ccc00dc753c8748fbda66e5bc15245de2844e160b44ff1c288db912a1f18ff
 DIST slocate-3.1.tar.gz 37748 RMD160 d3b1e818cc35ce8e87ec1b0764f6b2145a319e13 SHA1 e427552664385b86931b7626c26bd95ae5f9f085 SHA256 6abec68ab50fa743739fb78a5063c295ae2f7d04d2e538f7c3108120e49a3266
 EBUILD slocate-3.1-r1.ebuild 2480 RMD160 5acc83677e6157740a56ae234a685d62c393727d SHA1 5ced0e000ae7a52d37019e98a0a91078933225df SHA256 216b698282526096ee73fd4e10917466c509ff6e2c1c73afe069c3c691c0197d
 EBUILD slocate-3.1-r2.ebuild 2576 RMD160 08324629f7ed19d854e6df00acd55a2f467075a1 SHA1 b6c37736758a6e6d8911568b315c30de5ceaddab SHA256 e681b2e9748ae3a6ea5ad8de4af619e062afc7773a6eda244cda122a1dc18088
-MISC ChangeLog 11462 RMD160 1b3f4762bf10fceb9109c488a066110bc0f769c5 SHA1 1f289b84e5c796e4b0fe821f79430548d959a85c SHA256 0de77e181365f12d5bdc2f6e5eacf7dba226f0d5be106152e397192c8e196c18
+MISC ChangeLog 11609 RMD160 f4c0d9c3eed52e28d563306f735f38508fa58278 SHA1 c2a200d6b59c412b5cefad24696eb8e3d6e3de35 SHA256 7f4bda5fd91dd39abb05205ca9de010875963a49fb6e1d65cdc67e72a701a83f
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
